fixed color on mobile nav background

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -129,7 +129,7 @@
     align-items: center;
     justify-content: center;
     gap: 1.5rem;
-    background-color: #0B2554;
+    background-color: #0e1f3a;
     margin: 0;
     transition: .5s;
     transform: translateY(-100vh);
